--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="revisit-after" content="5 days">
     <meta name="robots" content="index, follow">
     <title>Atelier Moos | Association For Creative Freedom </title>
-    <link rel="icon" href="img/logo.svg" type="image/svg">
+    <link rel="icon" href="img/logo.svg" type="image/svg" sizes="16x16">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/header.css">
